--- a/Try/CSS/1CSS/csscheatsheet/src/style.css
+++ b/Try/CSS/1CSS/csscheatsheet/src/style.css
@@ -20,7 +20,22 @@ p{
     
 }
 
+a{
+    text-decoration:none;
+    color: black;
+}
 
+a:hover{
+    color: brown;
+}
+
+a:active{
+    color: green;
+}
+
+a:visited{
+    color: blueviolet;
+}  
 
 .container{
    /*  width: 960px; If we set width in px it responding or it will not adoport properly. So, setting width in %(percent) is necessary! */
@@ -120,6 +135,64 @@ p{
 }
 
 .categories ul{
+    padding: 0;
     list-style-type: square;
+    padding: 10px;
+}
+
+.categories li{
+    padding-bottom: 6px;
+    border-bottom: 1px black dotted;
+    list-style-image: url('../src/images/checkmark.png');
+}
+
+.my-form{
+    padding: 20px 50px;
+}
+
+.form-group{
+    padding-bottom: 20px;
+}
+
+.my-form label{ /* !!!????????*/
+    display: block;
+}
+
+.my-form input[type="text"], .my-form textarea{
+    padding: 10px 20px;
+    width: 100%;
+}
+
+/*
+.my-form input[type="submit"]{
+    background-color: aquamarine;
+    color: black;
+}*/
+
+.button{
+    background-color: brown;
+    color: chartreuse;
     padding: 5px;
+    border: none;
+}
+
+.button:hover{
+    background-color: cornflowerblue;
+}
+
+.block{
+    background-color: burlywood;
+    float: left;
+    width: 33.3%;
+    box-sizing: border-box;
+    border: 1px black dashed;
+    padding: 10px 5px;
+}
+
+.p-block{
+    color: firebrick;
+}
+
+.clr{
+    clear: both;
 }
