--- a/Try/CSS/1CSS/mywebsite/src/style.css
+++ b/Try/CSS/1CSS/mywebsite/src/style.css
@@ -46,6 +46,6 @@ body{
 }
 
 #showcase{
-    background-image: url('images/background.jpg');
+    background-image: url('images/showcase.jpg');
     color: black;
 }
